# epd-clock

./: .gitignore  README.md
fw/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
fw/binloader/: CMakeLists.txt  binloader.c
fw/binloader/drivers/: gpio.c  gpio.h  spi.c  uart.c
fw/binloader/hal/: gpio.c  spi.c  spi.h  uart.c  uart.h
fw/clock/: CMakeLists.txt  clock.c
fw/clock/drivers/: adc.c  adc.h  epd-2in9.c  epd-2in9.h  gpio.c  gpio.h  i2c.c  i2c.h  platform.c  platform.h  pm.c  pm.h  spi.c  spi.h  timer.c  timer.h  uart.c
fw/clock/lib/: button.c  button.h  pcf8563.c  pcf8563.h  search.c  search.h  spi-nor.c  spi-nor.h  time.c  time.h  utf8-cov.c  utf8-cov.h
fw/clock/sys/: core.c  core.h  font.c  font.h  ui.c  ui.h
fw/components/network/: CMakeLists.txt  dns-server.c  http-server.c  https-request.c  net-manager.c  weather.c
fw/components/network/include/: dns-server.h  http-server.h  https-request.h  net-manager.h  weather.h
fw/components/storage/: CMakeLists.txt  db.c  fs.c
fw/components/storage/include/: db.h  fs.h
fw/components/zlib/: CMakeLists.txt
fw/main/: CMakeLists.txt  clock.c  config.c  display.c  epd-2in9.c  search.c
fw/main/include/: clock.h  config.h  display.h  epd-2in9.h  font.h  search.h  utf8-cov.h
hw/: button.sch  epd-clock-cache.lib  epd-clock-rescue.lib  epd-clock.kicad_pcb  epd-clock.kicad_pro  epd-clock.kicad_sch  epd-clock.pro  epd-clock.sch  epd.kicad_sch  epd.sch  flash.sch  mcu.sch  power.sch  rtc.sch  sym-lib-table
hw/bom/: ibom.html
hw/gerber/: epd-clock-B_Cu.gbr  epd-clock-B_Mask.gbr  epd-clock-B_SilkS.gbr  epd-clock-Edge_Cuts.gbr  epd-clock-F_Cu.gbr  epd-clock-F_Mask.gbr  epd-clock-F_SilkS.gbr  epd-clock-In1_Cu_PWR.gbr  epd-clock-In2_Cu_GND.gbr  epd-clock-NPTH.drl  epd-clock-PTH.drl  epd-clock-job.gbrjob
